--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,8 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>hbase.coprocessor.regionobserver.RegionObserverExample</mainClass>
+<!--                            <mainClass>hbase.coprocessor.regionobserver.RegionObserverExample</mainClass>-->
+                            <mainClass>hbase.coprocessor.endpoint.SumEndpoint</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
@@ -60,6 +61,12 @@
             <groupId>org.apache.hbase</groupId>
             <artifactId>hbase-protocol</artifactId>
             <version>2.2.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java</artifactId>
+            <version>3.12.2</version>
         </dependency>
     </dependencies>
 
