--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.github.hieuncong</groupId>
     <artifactId>hbase-coprocessor</artifactId>
-    <version>2.0</version>
+    <version>regionobserver-1.0</version>
     <build>
         <plugins>
             <plugin>
@@ -22,8 +22,8 @@
                 <configuration>
                     <archive>
                         <manifest>
-<!--                            <mainClass>hbase.coprocessor.regionobserver.RegionObserverExample</mainClass>-->
-                            <mainClass>hbase.coprocessor.endpoint.SumEndpoint</mainClass>
+                            <mainClass>hbase.coprocessor.regionobserver.RegionObserverExample</mainClass>
+<!--                            <mainClass>hbase.coprocessor.endpoint.SumEndpoint</mainClass>-->
                         </manifest>
                     </archive>
                     <descriptorRefs>
