--- a/pom.xml
+++ b/pom.xml
@@ -6,9 +6,9 @@
 
     <groupId>com.github.hieuncong</groupId>
     <artifactId>hbase-coprocessor</artifactId>
-    <!--    <version>endpoint-1.0</version>-->
-<!--    <version>regionobserver-1.0</version>-->
-    <version>tableops-1.0</version>
+<!--        <version>endpoint-1.0</version>-->
+    <version>regionobserver-1.0</version>
+<!--    <version>tableops-1.0</version>-->
     <build>
         <plugins>
             <plugin>
@@ -24,8 +24,8 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>hbase.TableOps</mainClass>
-<!--                            <mainClass>hbase.coprocessor.regionobserver.RegionObserverExample</mainClass>-->
+<!--                            <mainClass>hbase.TableOps</mainClass>-->
+                            <mainClass>hbase.coprocessor.regionobserver.RegionObserverExample</mainClass>
 <!--                            <mainClass>hbase.coprocessor.endpoint.SumEndPoint</mainClass>-->
                         </manifest>
                     </archive>
